# data360-voice

./: .env.example  .gitignore  CLAUDE.md  README.md  _run_8_2_validation.sh  _setup_8_2.sh  _story_8_2_complete.sh  chainlit.md  docker-compose.yml  justfile  pyproject.toml
.chainlit/: config.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
_bmad-output/: project-context.md
_bmad-output/brainstorming/: brainstorming-report.md
_bmad-output/implementation-artifacts/: 1-1-project-setup-and-configuration.md  1-2-data360-api-client-with-error-handling.md  1-3-search-indicators-mcp-tool.md  1-4-get-data-mcp-tool.md  1-5-get-metadata-list-indicators-and-get-disaggregation-mcp-tools.md  1-6-dual-transport-and-claude-desktop-testing.md  1-7-mcp-server-test-suite.md  2-3-mcp-client-integration-with-claude-tool-use.md  2-4-narrative-response-generation.md  2-5-multi-turn-conversation-support.md  2-6-conversation-persistence-and-history.md  3-1-system-prompt-for-llm-grounding-boundary.md  3-2-citation-registry-pipeline.md  3-3-data-freshness-transparency.md  8-1-pgvector-schema-and-database-migration.md  8-2-document-processing-pipeline.md  8-3-mcp-rag-tools.md  8-3-search-documents-and-list-documents-mcp-tools.md  8-4-chainlit-upload-integration.md  8-5-system-prompt-update-for-cross-referencing.md  8-6-rag-test-suite.md  9-1-citation-registry-rendering-in-chat-ui.md  (+9 more)
app/: chat.py  citations.py  config.py  data.py  db.py  main.py  prompts.py
db/: 002_rag_schema.sql  init.sql
docs/: persistence.md
mcp_server/: __init__.py  config.py  data360_client.py  server.py
public/: citations.css  citations.js
(+50 files in other folders)
