[project]
name = "data360-voice"
version = "0.1.0"
description = "Conversational AI tool for querying World Bank climate data with verified citations"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.1.1",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.7",
]

[tool.ruff]
target-version = "py312"
line-length = 120
exclude = [".claude", "_bmad"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
asyncio_mode = "auto"
